# sample_cmake_withgtest

./: CMakeLists.txt  README.md
app1/: CMakeLists.txt  main.cpp
gtest/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  mylib.cpp  mylib.h
